subtracted 1 participant (because final N is 120)

--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -25,7 +25,7 @@ options(papaja.na_string = "")
 The present Registered Report sought to evaluate whether our new Cognitive and Affective Discounting (CAD) paradigm is suitable for determining individual subjective values of the ER strategies strategies distraction, distancing, and suppression.
 We therefore adapted the Cognitive Effort Discounting Paradigm by Westbrook et al. [-@Westbrook2013] in a way that allows to determine SVs for tasks that have no objective order of difficulty levels. 
 The new paradigm was tested on an *n*-back task [@ZernaScheffel2022] and a classic ER paradigm.
-The latter was completed by $N=`r sum(data_survey[,"followup_ered_complete"] == 2)`$ participants. 
+The latter was completed by $N=`r sum(data_survey[,"followup_ered_complete"] == 2)-1`$ participants. 
 As expected, use of ER strategies was associated with decreased subjective and physiological arousal.
 This finding is in line with previous meta-analytic findings, indicating the effectiveness of ER strategies, both on subjective as well as physiological levels [@Webb2012;@Zaehringer2020].
 Further, we found higher levels of subjective cognitive effort for all ER strategies compared to active viewing. 
