--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -58,7 +58,7 @@ The highest SVs of the individuals were associated with the choice made by the p
 Until now, it has been difficult to transfer such findings from the laboratory to everyday life[@Wilms2020].
 This could be due to the fact that the strategies that have to be chosen between are often fixed in laboratory tests by the experimental design[@Sheppes2011;@Sheppes2014;@Scheffel2021].
 It was therefore attempted to investigate ER choice and influencing factors in everyday life.
-However, even there, certain strategies were often prescribed (for example studies, see English et al.[@Englisch2017], Millgram et al.[@Millgram2019], Wilms et al.[@Wilms2020]). 
+However, even there, certain strategies were often prescribed (for example studies, see English et al.[@English2017], Millgram et al.[@Millgram2019], Wilms et al.[@Wilms2020]). 
 Although these covered a large area of the emotion-genesis process[@Gross1998emerging], they were nevertheless ultimately fixed.
 Of course, the calculation of SVs in our new CAD paradigm is tied to the strategies with which the strategy of interest is compared.
 However, it would be possible to use ecological momentary assessment to capture ER strategies[@Koval2020].
@@ -85,7 +85,7 @@ First, it must be mentioned that a block design was used.
 This allows for habituation effects of EMG activity within the block.
 However, block designs are common in ER research [@Barreiros2019] and were used in previous studies [@Scheffel2019]. 
 Second, it has to be mentioned that subjective arousal, effort, and utility ratings were conducted retrospectively at the end of each block.
-It is also known that affect labeling might attenuate emotional experience [@Liebermann2007;@Torre2018]. 
+It is also known that affect labeling might attenuate emotional experience [@Lieberman2007;@Torre2018]. 
 That is why we decided not to have the ratings done after every image.
 Furthermore, we were able to confirm our manipulation checks, indicating that implementation of ER strategies was successful, both on subjective and physiological levels.
 Taken together, these two facts may have led to slightly lower associations between SVs and predictors.
