--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -654,6 +654,20 @@ https://www.nature.com/articles/nn2007.pdf},
   year      = {2008},
 }
 
+@article{Lieberman2007,
+   author = {Lieberman, M. D. and Eisenberger, N. I. and Crockett, M. J. and Tom, S. M. and Pfeifer, J. H. and Way, B. M.},
+   title = {Putting feelings into words - Affect labeling disrupts amygdala activity in response to affective stimuli},
+   journal = {Psychological Science},
+   volume = {18},
+   number = {5},
+   pages = {421-428},
+   ISSN = {0956-7976},
+   DOI = {10.1111/j.1467-9280.2007.01916.x},
+   url = {<Go to ISI>://WOS:000246966700011
+https://journals.sagepub.com/doi/pdf/10.1111/j.1467-9280.2007.01916.x},
+   year = {2007}
+}
+
 @article{MesmerMagnus2012,
    author = {Mesmer-Magnus, J. R. and DeChurch, L. A. and Wax, A.},
    title = {Moving emotional labor beyond surface and deep acting: A discordance-congruence perspective},
@@ -824,6 +838,21 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6326885/pdf/nihms-1515865.pdf},
    year = {2015},
 }
 
+@article{Scheffel2019,
+   author = {Scheffel, C. and Diers, K. and Schönfeld, S. and Brocke, B. and Strobel, A. and Dörfel, D.},
+   title = {Cognitive emotion regulation and personality: An analysis of individual differences in the neural and behavioral correlates of successful reappraisal},
+   journal = {Personality Neuroscience},
+   volume = {2},
+   pages = {e11},
+   ISSN = {2513-9886 (Electronic)
+2513-9886 (Linking)
+},
+   DOI = {10.1017/pen.2019.11},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/32435746},
+   year = {2019},
+   type = {Journal Article}
+}
+
 @Article{Scheffel2021,
    author = {Scheffel, C. and Graupner, S. T. and Gartner, A. and Zerna, J. and Strobel, A. and Dorfel, D.},
    title = {Effort beats effectiveness in emotion regulation choice: Differences between suppression and distancing in subjective and physiological measures},
@@ -973,6 +1002,22 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.0022-3506.2004.00263.x?d
    year = {2004},
 }
 
+@article{Torre2018,
+   author = {Torre, J. B. and Lieberman, M. D.},
+   title = {Putting Feelings Into Words: Affect Labeling as Implicit Emotion Regulation},
+   journal = {Emotion Review},
+   volume = {10},
+   number = {2},
+   pages = {116-124},
+   ISSN = {1754-0739},
+   DOI = {10.1177/1754073917742706},
+   url = {<Go to ISI>://WOS:000432059700004
+https://journals.sagepub.com/doi/pdf/10.1177/1754073917742706},
+   year = {2018},
+   type = {Journal Article}
+}
+
+
 @article{Webb2012,
    author = {Webb, T. L. and Miles, E. and Sheeran, P.},
    title = {Dealing with feeling: a meta-analysis of the effectiveness of strategies derived from the process model of emotion regulation},
@@ -1045,7 +1090,7 @@ http://www.tandfonline.com/doi/pdf/10.1080/10615806.2012.734810?needAccess=true}
    year = {2013},
 }
 
-@article{Yougn2020,
+@article{Young2020,
    author = {Young, G. and Suri, G.},
    title = {Emotion regulation choice: a broad examination of external factors},
    journal = {Cognition & Emotion},
