--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -41,6 +41,19 @@ https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
    year = {2015},
 }
 
+@article{AldaoChristensen2015,
+   author = {Aldao, A. and Christensen, K.},
+   title = {Linking the Expanded Process Model of Emotion Regulation to Psychopathology by Focusing on Behavioral Outcomes of Regulation},
+   journal = {Psychological Inquiry},
+   volume = {26},
+   number = {1},
+   pages = {27-36},
+   ISSN = {1047-840x},
+   DOI = {10.1080/1047840x.2015.962399},
+   url = {<Go to ISI>://WOS:000350648700002},
+   year = {2015}
+}
+
 @article{Barreiros2019,
    author = {Barreiros, A. R. and Almeida, I. and Baia, B. C. and Castelo-Branco, M.},
    title = {Amygdala Modulation During Emotion Regulation Training With fMRI-Based Neurofeedback},
@@ -701,6 +714,19 @@ https://journals.sagepub.com/doi/pdf/10.1111/j.1467-9280.2007.01916.x},
   year   = {2021},
   groups = {CERED},
   url    = {https://CRAN.R-project.org/package=BayesFactor},
+}
+
+@article{Murphy2018,
+   author = {Murphy, J. W. and Young, M. A.},
+   title = {Dynamic processes in emotion regulation choice},
+   journal = {Cognition & Emotion},
+   volume = {32},
+   number = {8},
+   pages = {1654-1662},
+   ISSN = {0269-9931},
+   DOI = {10.1080/02699931.2017.1419935},
+   url = {<Go to ISI>://WOS:000451607900011},
+   year = {2018}
 }
 
 @article{Lougheed2012,
