--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -942,6 +942,18 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4158366/pdf/nst116.pdf},
    year = {2014},
 }
 
+@article{Sheppes2020,
+   author = {Sheppes, G.},
+   title = {Transcending the "good & bad" and "here & now" in emotion regulation: Costs and benefits of strategies across regulatory stages},
+   journal = {Advances in Experimental Social Psychology, Vol 61},
+   volume = {61},
+   pages = {185-236},
+   ISSN = {0065-2601},
+   DOI = {10.1016/bs.aesp.2019.09.003},
+   url = {<Go to ISI>://WOS:000609245200004},
+   year = {2020}
+}
+
 @Article{Simmons2012,
   author  = {Simmons, J. P. and Nelson, L. D. and Simonsohn, U. A.},
   journal = {SSRN Electronic Journal},
