first part of discussion finished

--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -681,6 +681,18 @@ https://journals.sagepub.com/doi/pdf/10.1111/j.1467-9280.2007.01916.x},
    year = {2007}
 }
 
+@article{Matthews2021,
+   author = {Matthews, M. and Webb, T. L. and Shafir, R. and Snow, M. and Sheppes, G.},
+   title = {Identifying the determinants of emotion regulation choice: a systematic review with meta-analysis},
+   journal = {Cognition and Emotion},
+   pages = {1-29},
+   ISSN = {1464-0600 (Electronic)
+0269-9931 (Linking)},
+   DOI = {10.1080/02699931.2021.1945538},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/34165040},
+   year = {2021}
+}
+
 @article{MesmerMagnus2012,
    author = {Mesmer-Magnus, J. R. and DeChurch, L. A. and Wax, A.},
    title = {Moving emotional labor beyond surface and deep acting: A discordance-congruence perspective},
