--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -49,7 +49,7 @@ However, individual SVs did not show associations with ER flexibility, we theref
 Our goal was to calculate individual subjective values to develop a better understanding of ER stratagem selection.
 Most individuals show great variability in the choice of strategies, both, within-strategy and between-strategy[@Blanke2020;@Burr2020;@Elkjaer2022]. 
 Greater variability might even adaptive [@Blanke2020;@Aldao2015].
-In addition, a wide variety of factors that influence the choice of strategies in specific situations were examined[@Scheffel2021;@Sheppes2011;@Sheppes2014;@Wilms2020;@Young2020], including intensity of the situation and effort.
+In addition, a wide variety of factors that influence the choice of strategies in specific situations were examined[@Scheffel2021;@Sheppes2011;@Sheppes2014;@Wilms2020;@Young2020;@Matthews2021], including intensity of the situation and effort.
 However, these factors have often been studied separately.
 Only rarely have effects of the factors been studied in combination[@Young2020].
 Moreover, the usual paradigms used in ER choice research (e.g., Sheppes et al.[@Sheppes2011]) can only estimate how a factor tends to drive the choice in one direction or the other.
@@ -73,12 +73,20 @@ If it is determined that the regulation goal is not being achieved, the ER strat
 Importantly, information about the effects of implementing ER strategies influences the choice of ER strategies in future situations, due to contextual feedback even changes the context[@Gross2015;@AldaoChristensen2015;@Murphy2018;@Sheppes2020].
 This means that for studies on ER Choice, not only situational factors should be taken into account, but also contextual factors[@Murphy2018].
 For example, Murphy and Young[@Murphy2018] could show that in a classic ER choice paradigm[@Sheppes2011], strategy selection was significantly influenced by strategy selection and negative affect of the preceding trial.
-
-
-- Unser paradigma bezieht das aber mit ein, dennindem die SVs auf Grundlage vorheriger Erfahrungen gebildet werden.
-
+This provides empirical evidence that experience gained during use of ER strategies influences future choice of ER strategies.
+Our newly developed paradigm also makes an important contribution here.
+The information and experiences that participants gather when using strategies subsequently flow implicitly into the calculation of subjective values.
+That is, because the participants first go through all the strategies and then make the monetary decisions on the basis that they should repeat the strategies again. 
+The decisions are made on the basis of the stimulus material that the individuals previously viewed. 
+Therefore, the question arises as to how stable these individual SVs are.
 
 ## Trait character of SVs
+From relatively early on in ER research, the question was asked whether the use of certain strategies is habitual, i.e. whether they have a trait character[@GrossJohn2003].
+Although 
+The individual SVs computed in our CAD paradigm were assessed in the laboratory in a single situation.
+
+
+
 Hat das Trait-Charakter?
 
 State character of goals @Wilms2020
